# krakenapi

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  kapi.cpp  kapi.hpp
.github/workflows/: cmake-single-platform.yml
docs/: code-review-plan.md  ws-error-handling-gaps.md
docs/plans/: code-review-findings.md
examples/: private_method.cpp  private_ws.cpp  public_ws.cpp  ws.cpp
include/: kapi.hpp  kraken_ix_ws_connection.hpp  kraken_rest_api.hpp  kraken_rest_client.hpp  kraken_types.hpp  kraken_ws_api.hpp  kraken_ws_client.hpp  kraken_ws_client.inl  ws_reconnect_session.hpp  ws_reconnect_session.inl
libjson/: JSONOptions.h
src/: CMakeLists.txt  kapi.cpp  kraken_rest_client.cpp  kraken_ws_client.cpp
tests/: CMakeLists.txt
tests/examples/: backward_init.cpp  kapi.cpp  kapi.hpp  kraken_example.cpp  private_rest.cpp  private_ws.cpp  public_rest.cpp  public_ws.cpp  rest_client_example.cpp  ws_client_example.cpp
tests/unit/: CMakeLists.txt  test_client.cpp  test_rest_requests.cpp  test_rest_responses.cpp  test_signature.cpp  test_ws_client.cpp  test_ws_reconnect_session.cpp  test_ws_responses.cpp  ws_client_example_json.hpp
